--- a/public/landing/assets/css/eduact.css
+++ b/public/landing/assets/css/eduact.css
@@ -2216,7 +2216,7 @@
 
 .blog-two__cats a {
   display: inline-block;
-  background-color: var(--eduact-base);
+  /* background-color: var(--eduact-base); */
   color: var(--eduact-white);
   border-radius: 5px;
   font-size: 14px;
@@ -2229,7 +2229,7 @@
 }
 
 .blog-two__cats a:hover {
-  background-color: var(--eduact-secondary);
+  /* background-color: var(--eduact-secondary); */
 }
 
 .blog-two__date {
